# wolf

./: .gitignore  README.md  cross_model_dashboard.jsx  llm_bias_dashboard.html  pyproject.toml  run_latin_square.sh  speed_bias_cloud.py  speed_bias_test.py  speed_bias_test_oss.py
configs/: default_game.yaml  pool_benchmark.yaml
configs/benchmarks/: llm_7p_7model.yaml  llm_7p_test.yaml  llm_test.yaml  name_bias_r1.yaml  name_bias_r2.yaml  name_bias_r3.yaml  name_bias_r4.yaml  name_bias_r5.yaml  name_bias_r6.yaml  name_bias_r7.yaml  name_bias_test.yaml  name_bias_test2.yaml  quick_test.yaml  shuffle_test.yaml  shuffle_test_oss.yaml  speed_mafia.yaml
configs/models/: ollama_llama3.yaml  ollama_qwq.yaml
configs/roles/: classic.yaml
experiments/analysis/: generate_figures.py
experiments/analysis/results/: gpt5mini_140n_2386g.json  grok3fast_140n_700g.json  grok41fast_140n_700g.json
experiments/results/: gpt4omini_140n_700g.json  results_grok-3-fast_140names_700g.json  results_grok-4-1-fast-reasoning_140names_700g.json
results/: benchmark_results.json
results/quick_test/: benchmark_results.json
src/wolf/: __init__.py  __main__.py  cli.py  narrator.py  web.py
src/wolf/agents/: __init__.py  base.py  briefing_builder.py  human_agent.py  knowledge_base.py  llm_agent.py  memory.py  prompt_builder.py  random_agent.py  toolkit.py  (+1 more)
tests/integration/: test_full_game.py
tests/unit/: test_channels.py  test_collector.py  test_config.py  test_memory.py  test_prompt_builder.py  test_resolver.py  test_roles.py  test_state.py  test_token_tracker.py  test_victory.py
(+43 files in other folders)
